<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home timeline</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="body">Body</string>
    <string name="tvScreenName">\@Screen Name</string>
    <string name="title_activity_tweet_compose">TweetComposeActivity</string>
    <string name="compose_hint">Start typing the tweet ...</string>
    <string name="offline_error">Offline: Cannot perform operation!</string>
    <string name="load_offline">Offline: Home timeline may not be latest!</string>
    <string name="offline_cannot_getmore">Offline: Cannot get older tweets!</string>
    <string name="title_activity_tweet_detail">Tweet Detail</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tvTagLine">Tag line....</string>
    <string name="tvTweets">Tweets</string>
    <string name="tvFollowing">Following</string>
    <string name="tvFollowers">Followers</string>
    <string name="tvRetweets">Retweets</string>
    <string name="tvFavorites">Favorites</string>

</resources>
