<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/item_tweet">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/item_info">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivProfileImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ff83ff2e"
            android:layout_marginRight="5dp" />

<!--
        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivProfileImage"
            android:scaleType="fitCenter"
            app:riv_corner_radius="20dip"
            app:riv_border_width="2dip"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="false"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
-->

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/tvUserName"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivProfileImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tvScreenName"
            android:id="@+id/tvScreenName"
            android:layout_below="@+id/tvUserName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_alignStart="@+id/tvUserName"
            android:layout_toEndOf="@+id/ivProfileImage" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:id="@+id/tvBody"
            android:paddingTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/tvScreenName"
            android:layout_toRightOf="@+id/ivProfileImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/tvSince"
            android:layout_above="@+id/tvScreenName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_below="@+id/item_info"
    android:id="@+id/decorators">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Fav Count"
            android:id="@+id/tvFavCount"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:id="@+id/ivFav"
            android:src="@drawable/ic_fav"
            android:paddingRight="5dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/tvFavCount" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:id="@+id/ivReply"
            android:src="@drawable/ic_reply"
            android:paddingLeft="5dp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="RetweetCount"
            android:id="@+id/tvRetweetCount"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerInParent="true"
            android:paddingRight="5dp"
            android:id="@+id/ivRetweet"
            android:src="@drawable/ic_retweet"
            android:layout_toLeftOf="@id/tvRetweetCount"/>


    </RelativeLayout>



</RelativeLayout>